--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
   </div>
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <video width="800" controls>
-      <source src="video/My Movie.mp4">
-    </video>
+         <iframe width="800" height="400" src="https://youtu.be/WDuxEF0EbC4">
+          </iframe>
   </div>
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <video width="800" controls>
-      <source src="video/30s Pitch.mp4">
-    </video>
+        <iframe width="800" height="400" src="https://youtu.be/9l_4kiYLLFc">
+        </iframe>
   </div>
      
         
